--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "testd3",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
+    "start:dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "d3": "^5.7.0"
-  }
+  },
+  "devDependencies": {
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "description": "",
+  "private": true
 }
