--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "testd3",
   "version": "1.0.0",
   "scripts": {
-    "start:dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "d3": "^5.7.0"
+    "d3": "3.5.17"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.6.0",
+    "regenerator-runtime": "^0.13.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
