--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "d3-speedo-gauge",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest",
+    "component-test": "node --experimental-worker node_modules/cucumber/bin/cucumber-js"
   },
   "author": "",
   "license": "ISC",
