--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "d3": "3.5.17"
   },
   "devDependencies": {
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
     "cucumber": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "jest": "^23.6.0",
     "puppeteer": "^1.10.0",
     "regenerator-runtime": "^0.13.1",
