--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d3-speedo-gauge",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "jest",
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "d3": "3.5.17"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apollowebdesigns/d3gauge.git"
   },
   "devDependencies": {
     "browserify": "^16.2.3",
