--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d3-speedo-gauge",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "jest",
@@ -19,6 +19,9 @@
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "cucumber": "^5.0.2",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "jest": "^25.0.0",
