--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "d3-speedo-gauge",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "jest",
-    "component-test": "node --experimental-worker node_modules/cucumber/bin/cucumber-js"
+    "component-test": "node --experimental-worker node_modules/cucumber/bin/cucumber-js",
+    "release": "standard-version"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "jest": "^25.0.0",
     "puppeteer": "^1.20.0",
     "regenerator-runtime": "^0.13.1",
+    "standard-version": "^7.0.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
