--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "d3-speedo-gauge",
-  "version": "1.3.3",
+  "version": "1.3.5",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "jest",
     "component-test": "node --experimental-worker node_modules/cucumber/bin/cucumber-js",
-    "release": "standard-version"
+    "release": "standard-version; git push --follow-tags origin master && npm publish"
   },
   "author": "",
   "license": "ISC",
